gcc/testsuite/rust/compile/missing_closing_paren.rs
#![feature(no_core)]
#![no_core]

fn foo() {
    (""; // { dg-error "unexpected token .*" }
}
